--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,15 @@ services:
       - clusters_vol:/var/lib/mysql/
     ports:
       - 3307:3306
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/app
+    ports:
+      - "8008:8000"
+    depends_on:
+      - db
 
 volumes:
   clusters_vol:
