--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     environment:
       - MYSQL_USER="dexter"
       - MYSQL_PASSWORD="password"
-      - MYSQL_DATABASE="drosmokers_db"
+      - MYSQL_DATABASE="drosmokers_test_db"
       - MYSQL_ROOT_PASSWORD="password"
     volumes:
-      - dev_vol:/var/lib/mysql/
+      - test_vol:/var/lib/mysql/
     ports:
       - 3305:3306
   web:
@@ -24,4 +24,4 @@ services:
       - db
 
 volumes:
-  dev_vol:
+  test_vol:
