--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,22 @@ version: '3.9'
 
 services:
   db:
-    image: mysql
+    image: mysql:8
     restart: always
     environment:
-      - MYSQL_USER="dexter"
-      - MYSQL_PASSWORD="password"
-      - MYSQL_DATABASE="drosmokers_test_db"
-      - MYSQL_ROOT_PASSWORD="password"
+      MYSQL_USER: 'dexter'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: 'drosmokers_test_db'
     volumes:
       - test_vol:/var/lib/mysql/
     ports:
-      - 3305:3306
+      - "3306:3306"
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - .:/app
+    - .:/app
     ports:
       - "8000:8000"
     depends_on:
