--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,16 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - test_vol:/var/lib/mysql
+    depends_on:
+      - web
 
 volumes:
   test_vol:
