--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,9 @@ server {
     server_name localhost;
 
     location / {
+        add_header 'Access-Control-Allow-Origin' 'http://localhost';
         proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
